refactor : 동시접속 가능하게 끔 하는 로직